# TrialStuff

./: CellLocator.cxx  ExecuteWithDeviceAdapter.cxx  PointLocator.cxx  swap.cxx
ArrayHandleFromArray/: CMakeLists.txt  arrayhandle.cxx
MPI_trials/: CMakeLists.txt  distribute.cxx
arrayhandlezip/: ArrayHandleZip.cxx  CMakeLists.txt  build
cppgeneral/: templatedbase.cxx
doublegyre/: CMakeLists.txt  DoubleGyrefield.cxx  GenerateDataSet.cxx
downsample/: ArrangeData.cxx  CMakeLists.txt
forKristi/: SwitchDevice.cxx
forStephanie/: CMakeLists.txt  ParticleAdvection.cxx  ParticleAdvectionTBB.cxx  build  seeds.cxx
gridlocator/: CMakeLists.txt  CellInterpolationHelper.h  GridLocator.cxx  build  temp.vtk
isosurfacetriangulate/: extracttriangles.cxx  tricase.cxx
parse/: Makefile  caseparser.cxx
pastandalone/: CMakeLists.txt  pasa.cxx  pasaCUDA.cu  pasaTBB.cxx  seeds.txt
plots/: shared.py
vtkmpointsextractor/: CMakeLists.txt  forSud.cxx
